updates psd exporter to include auto masking feature

--- a/psd_exporter/index.html
+++ b/psd_exporter/index.html
@@ -43,6 +43,7 @@
     <div class="wrapper">
       <sp-heading class="subHeader">PSD Exporter</sp-heading>
       <sp-divider size="medium"></sp-divider>
+      <sp-button class="button" id="createMasks">Create Masks</sp-button>
       <sp-button class="button" id="flattenGroups">Flatten Groups</sp-button>
       <sp-button class="button" id="exportFile">Export File</sp-button>
     </div>
